--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1231,7 +1231,8 @@ border-radius: 20px;
 
 .sabias-container {
   background-color: lightgrey;
-  width: 350px;
+  //width: 350px;
+  width: 100%;
   height: 100%;
   border: 3px solid darkgray;
   -webkit-border-radius: 20px;
@@ -1240,6 +1241,7 @@ border-radius: 20px;
   -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.29);
   -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.29);
   box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.29);
+
   @media (min-width: 800px) {
     width: 665px;
     height: 300px;
