--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1743,7 +1743,7 @@ button:hover{
   padding: 15px;
   background-color: chocolate;
   text-align: center;
-  border: 1px solid $color_6;
+  /*
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
@@ -1752,6 +1752,15 @@ button:hover{
   -ms-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
   -o-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+  */
+  background-image: -webkit-linear-gradient(top,#fcf8e3 0,#f8efc0 100%);
+  background-image: -o-linear-gradient(top,#fcf8e3 0,#f8efc0 100%);
+  background-image: -webkit-gradient(linear,left top,left bottom,from(#fcf8e3),to(#f8efc0));
+  background-image: linear-gradient(to bottom,#fcf8e3 0,#f8efc0 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffcf8e3', endColorstr='#fff8efc0', GradientType=0);
+  background-repeat: repeat-x;
+  //border-color: #f5e79e;
+  border: 1px solid #8a6d3b;
 }
 #message-chat{
   //height: 250px;
